resolved issues related problem

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand&display=swap");
     </style>
-    <title>To-Do Manager</title>
+    <title>Railway Madad System</title>
   </head>
   <body
     class="bg-gradient-to-r from-purple-300 to-teal-300 min-h-screen flex items-center justify-center"
