--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,7 +53,7 @@
           <div class="py-3">
             <label for="password">Password</label>
             <input
-              type="text"
+              type="password"
               name="password"
               class="border border-gray-300 text-gray-900 rounded p-2 w-full"
             />
