added color to submit and added emergency button

--- a/views/user/feedback.ejs
+++ b/views/user/feedback.ejs
@@ -46,7 +46,7 @@
               <form method="post" action="/issues/feedback">
                 <input type="hidden" name="idVal" value="<%=issue.id%>">
                 <input type="text" name="feedback" value="<%=issue.feedback%>">
-                <button type="submit">Submit</button>
+                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-opacity-75">Submit</button>
               </form>
             </td>
           </tr>
