--- a/views/sideBars/userSide.ejs
+++ b/views/sideBars/userSide.ejs
@@ -29,6 +29,13 @@
       class="text-white font-semibold hover:bg-blue-600 p-3 rounded"
       >Feedback</a
     >
+
+    <!-- Emergency Call Button -->
+    <a
+      href="tel:139"
+      class="text-white font-semibold bg-green-600 hover:bg-green-700 p-3 rounded"
+      >Emergency Call: 139</a
+    >
     <button
       onClick="window.location.href='/signout'"
       class="bg-red-600 text-white font-semibold py-1 px-4 rounded-lg shadow-lg hover:bg-red-700 transition duration-300 ease-in-out mt-2 mb-6"
