--- a/views/user/submitIssue.ejs
+++ b/views/user/submitIssue.ejs
@@ -53,6 +53,50 @@
                 required
               ></textarea>
             </div>
+            <!--Issue location-->
+            <div>
+              <label
+                for="station"
+                class="block text-lg font-medium text-gray-700"
+                >Issue Station:</label
+              >
+              <textarea
+                id="station"
+                name="station"
+                rows="6"
+                class="mt-2 p-4 block w-full rounded-md border border-gray-300 focus:ring-purple-500 focus:border-purple-500 shadow-sm"
+                placeholder="Enter the station where the issue happened"
+                required
+              ></textarea>
+            </div>
+            <div>
+              <label
+                for="platform"
+                class="block text-lg font-medium text-gray-700"
+                >Issue platform:</label
+              >
+              <textarea
+                id="platform"
+                name="platform"
+                rows="6"
+                class="mt-2 p-4 block w-full rounded-md border border-gray-300 focus:ring-purple-500 focus:border-purple-500 shadow-sm"
+                placeholder="Enter the platform where the issue is there"
+                required
+              ></textarea>
+            </div>
+            <div>
+              <label for="pnrNo" class="block text-lg font-medium text-gray-700"
+                >Issue PNR No:</label
+              >
+              <textarea
+                id="pnrNo"
+                name="pnrNo"
+                rows="6"
+                class="mt-2 p-4 block w-full rounded-md border border-gray-300 focus:ring-purple-500 focus:border-purple-500 shadow-sm"
+                placeholder="Enter the pnrNo of your issue"
+                required
+              ></textarea>
+            </div>
 
             <!-- Media Upload -->
             <div>
@@ -83,6 +127,7 @@
                 name="media"
                 accept="image/*,audio/*,video/*"
                 class="mt-2 block w-full text-lg text-gray-500 file:mr-4 file:py-3 file:px-6 file:rounded-full file:border-0 file:text-lg file:font-semibold file:bg-purple-100 file:text-purple-700 hover:file:bg-purple-200"
+                multiple
                 required
               />
             </div>
