minor issues are resolved

--- a/views/admin/issueDetails.ejs
+++ b/views/admin/issueDetails.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/train.png" type="image/png" />
+
     <title>Issue Details</title>
     <!-- Bootstrap -->
     <link
@@ -66,7 +68,7 @@
           />
         </div>
         <div class="flex justify-between">
-          <label class="font-semibold">PRN Number:</label>
+          <label class="font-semibold">PNR Number:</label>
           <input
             type="text"
             class="form-control border-gray-300 w-2/3 rounded-md"
