--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,8 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand&display=swap");
     </style>
+        <link rel="icon" href="/images/train.png" type="image/png" />
+
     <title><%= title%></title>
   </head>
   <body>
