--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -22,6 +22,7 @@
           .catch((err) => console.error(err));
       }
     </script>
+    <link rel="icon" href="/images/train.png" type="image/png" />
   </head>
   <body class="bg-gray-100">
     <button
