--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,34 @@
-<h1>Built with Node.js @team Railsamadhan</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="icon" href="/images/train.png" type="image/png" />
+
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        margin: 0;
+      }
+      .content {
+        flex: 1;
+      }
+      .footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #f1f1f1;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="content">
+      <!-- Your main content goes here -->
+    </div>
+    <div class="footer">
+      <h1>Built with Node.js @team Railsamadhan</h1>
+    </div>
+  </body>
+</html>
