--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,3 @@
+<link rel="icon" href="/images/train.png" type="image/png" />
+
 <h1 class="text-2xl font-semibold text-gray-600">Railway Madad system</h1>
