--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand&display=swap");
     </style>
+    <link rel="icon" href="/images/train.png" type="image/png" />
     <title>Railway Madad System</title>
   </head>
   <body
