--- a/views/user/issueStatus.ejs
+++ b/views/user/issueStatus.ejs
@@ -19,6 +19,8 @@
           .catch((err) => console.error(err));
       }
     </script>
+        <link rel="icon" href="/images/train.png" type="image/png" />
+
   </head>
   <body class="bg-gray-100 min-h-screen flex flex-col"></body>
  <%-include('../sideBars/userSide.ejs')%>
