--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script>
     </script>
+        <link rel="icon" href="/images/train.png" type="image/png" />
 
+  </head>
 
   <body class="bg-gray-100 min-h-screen flex flex-col">
     <%-include('../sideBars/userSide.ejs')%>
