--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -28,7 +28,7 @@
       <!-- Your main content goes here -->
     </div>
     <div class="footer">
-      <h1>Built with Node.js @team Railsamadhan</h1>
+      <h1>Built with Node.js @team IntelliRail samadhan</h1>
     </div>
   </body>
 </html>
