--- a/views/user/feedback.ejs
+++ b/views/user/feedback.ejs
@@ -58,5 +58,6 @@
     <div id="feedbackResponse" class="mt-6 text-center text-gray-700"></div>
   </div>
 </section>
+<%-include('../footer.ejs')%>
 </body>
 </html>
