--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rail Madad User Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script></script>
+    <link rel="icon" href="/images/train.png" type="image/png" />
     <script>
+      window.watsonAssistantChatOptions = {
+        integrationID: "c50f9a04-c988-41b9-baa2-594b9b87b715", // The ID of this integration.
+        region: "au-syd", // The region your integration is hosted in.
+        serviceInstanceID: "5b5c6ce6-8700-46a0-a212-50aeda2ae9bb", // The ID of your service instance.
+        onLoad: async (instance) => {
+          await instance.render();
+        },
+      };
+      setTimeout(function () {
+        const t = document.createElement("script");
+        t.src =
+          "https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
+          (window.watsonAssistantChatOptions.clientVersion || "latest") +
+          "/WatsonAssistantChatEntry.js";
+        document.head.appendChild(t);
+      });
     </script>
-        <link rel="icon" href="/images/train.png" type="image/png" />
-
   </head>
 
   <body class="bg-gray-100 min-h-screen flex flex-col">
@@ -20,37 +41,104 @@
       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1672400819739-f3aaede6ba3b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" style="max-height: 900px; object-fit: cover;" alt="First slide">
-            <div class="carousel-caption d-none d-md-block" style="text-align: center; top: 20px;">
-              <h5 style="font-size: 4rem; font-weight: bold; background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">Indian Railways at your service</h5>
+            <img
+              src="https://images.unsplash.com/photo-1672400819739-f3aaede6ba3b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="d-block w-100"
+              style="max-height: 900px; object-fit: cover"
+              alt="First slide"
+            />
+            <div
+              class="carousel-caption d-none d-md-block"
+              style="text-align: center; top: 20px"
+            >
+              <h5
+                style="
+                  font-size: 4rem;
+                  font-weight: bold;
+                  background-color: rgba(0, 0, 0, 0.7);
+                  padding: 20px;
+                  border-radius: 10px;
+                "
+              >
+                Indian Railways at your service
+              </h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1706720064191-87c0c4473e57?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" style="max-height: 900px; object-fit: cover;" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block" style="text-align: center; top: 20px;">
-              <h5 style="font-size: 4rem; font-weight: bold; background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">Indian Railways at your service</h5>
+            <img
+              src="https://images.unsplash.com/photo-1706720064191-87c0c4473e57?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="d-block w-100"
+              style="max-height: 900px; object-fit: cover"
+              alt="Second slide"
+            />
+            <div
+              class="carousel-caption d-none d-md-block"
+              style="text-align: center; top: 20px"
+            >
+              <h5
+                style="
+                  font-size: 4rem;
+                  font-weight: bold;
+                  background-color: rgba(0, 0, 0, 0.7);
+                  padding: 20px;
+                  border-radius: 10px;
+                "
+              >
+                Indian Railways at your service
+              </h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://as1.ftcdn.net/v2/jpg/04/75/99/98/1000_F_475999820_fU277meJh9CJdNmTdOQr6CyqYaM1U7XX.jpg" class="d-block w-100" style="max-height: 900px; object-fit: cover;" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block" style="text-align: center; top: 20px;">
-              <h5 style="font-size: 4rem; font-weight: bold; background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">Indian Railways at your service</h5>
+            <img
+              src="https://as1.ftcdn.net/v2/jpg/04/75/99/98/1000_F_475999820_fU277meJh9CJdNmTdOQr6CyqYaM1U7XX.jpg"
+              class="d-block w-100"
+              style="max-height: 900px; object-fit: cover"
+              alt="Third slide"
+            />
+            <div
+              class="carousel-caption d-none d-md-block"
+              style="text-align: center; top: 20px"
+            >
+              <h5
+                style="
+                  font-size: 4rem;
+                  font-weight: bold;
+                  background-color: rgba(0, 0, 0, 0.7);
+                  padding: 20px;
+                  border-radius: 10px;
+                "
+              >
+                Indian Railways at your service
+              </h5>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </main>
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <%-include('../footer.ejs')%>
   </body>
 </html>
